--- a/templates/courses/courses.html
+++ b/templates/courses/courses.html
@@ -11,7 +11,7 @@
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h2 class="section-title bg-white text-center px-3 color-oran custom-h6">Clases de Salsa y Timba en Lima</h2>
-                    <h2 class="text-center mb-4 color-cafe">{% if title %}{{ title }}{% endif %}</h2>
+                    <h2 class="text-center mb-2 color-cafe">{% if title %}{{ title }}{% endif %}</h2>
                 </div>
                 <div class="row g-4 justify-content-center">
 
@@ -50,11 +50,11 @@
         <!-- Courses End -->
     {% else %}
         <!-- Courses Start -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl mb-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h2 class="section-title bg-white text-center px-3 color-oran custom-h6">{% if title %}{{ title }}{% endif %}</h2>
-                    <h2 class="text-center mb-4 color-cafe">Próximamente.</h2>
+                    <h2 class="text-center mb-2 color-cafe">Próximamente.</h2>
                     
                 </div>
             </div>
@@ -64,11 +64,11 @@
 
     {% if list_course_you_might_like %}
     <!-- Courses might Like -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl mb-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h2 class="section-title bg-white text-center px-3 color-oran custom-h6">Otros cursos de baile que te pueden gustar</h2>
-                    <h2 class="text-center mb-4 color-cafe">¡Encuentra tu Curso Perfecto!</h2>
+                    <h2 class="text-center mb-2 color-cafe">¡Encuentra tu Curso Perfecto!</h2>
                 </div>
                 
                 <!-- list Courses Start -->
