--- a/templates/instructors/instructors.html
+++ b/templates/instructors/instructors.html
@@ -6,7 +6,7 @@
     <!-- About Start -->
     {% if instructors %}
         <!-- Team Start -->
-        <div id="instructors" class="container-xxl py-5">
+        <div id="instructors" class="container-xxl mb-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="section-title bg-white text-center text-primary px-3">Instructores</h6>
