--- a/templates/instructors/instructors_detail.html
+++ b/templates/instructors/instructors_detail.html
@@ -32,7 +32,7 @@
 
     {% if instructor.course %}
     <!-- Courses might Like -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl mb-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="section-title bg-white text-center px-3 color-oran">Mis Cursos</h6>
