--- a/templates/_base.html
+++ b/templates/_base.html
@@ -32,6 +32,9 @@
 
     <!-- Template Stylesheet -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="icon" href="{% static 'images/logos/favicon.ico' %}" type="image/x-icon">
+
+
   </head>
 
 
