cambio favicon mini

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -32,7 +32,8 @@
 
     <!-- Template Stylesheet -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="icon" href="{% static 'images/logos/favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'img/logos/favicon_min.png' %}" type="image/png">
+
 
 
   </head>
