--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 {% load static %}
-<html>
+<html lang="es-PE">
 
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}Clases de Salsa en Lima{% endblock title %}</title>
+    <title>{% block title %}Clases de Baile | Salsa y Timba en Lima | Cuban Groove{% endblock title %}</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="keywords" content="Clases de Salsa en Lima, Clases de Timba en Lima, Baile cubano en Lima, Escuela de baile en Lima, Salsa y Timba para principiantes, Instructores de baile en Lima, Academia de Salsa en Lima, Clases de baile latino, Cursos de Salsa y Timba, Danza afrocubana, Ritmos cubanos en Lima, Aprender a bailar Salsa, Clases de baile para adultos, Eventos de baile en Lima, Talleres de Salsa y Timba, Baile social en Lima, Salsa cubana, Timba cubana, Escuela de danza en Lima, Bailes latinos">
-    <meta name="description" content="CubanGroove ofrece clases de Salsa y Timba en Lima, donde aprenderás ritmos afrocubanos y otros géneros como son, chachachá, rumba y reguetón cubano. Con una metodología progresiva, dominarás la técnica de movimiento y los fundamentos teóricos del género. Únete a nosotros y transforma tu forma de bailar.">
+    <meta name="keywords" content="Clases de Baile en Lima, Clases de Timba en Lima, Baile cubano en Lima, Escuela de baile en Lima, Salsa y Timba para principiantes, Instructores de baile en Lima, Academia de Salsa en Lima, Clases de baile latino, Cursos de Salsa y Timba, Danza afrocubana, Ritmos cubanos en Lima, Aprender a bailar Salsa, Clases de baile para adultos, Eventos de baile en Lima, Talleres de Salsa y Timba, Baile social en Lima, Salsa cubana, Timba cubana, Escuela de danza en Lima, Bailes latinos">
+    <meta name="description" content="Aprende Salsa y Timba en Lima con Cuban Groove. Descubre ritmos cubanos como la salsa cubana, reparto, cubaton y rumba. ¡Transforma tu forma de bailar!">
 
-    <!-- Favicon -->
-    <!-- <link href="img/favicon.ico" rel="icon"> -->
+
+    <link rel="alternate" hreflang="es-PE" href="https://cubangrooveperu.com" />
 
     <!-- Google Web Fonts -->
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap" rel="stylesheet">
