--- a/templates/courses/courses.html
+++ b/templates/courses/courses.html
@@ -10,8 +10,8 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h2 class="section-title bg-white text-center px-3 color-oran custom-h6">Clases de Salsa y Timba en Lima</h2>
-                    <h2 class="text-center mb-2 color-cafe">{% if title %}{{ title }}{% endif %}</h2>
+                    <h2 class="section-title bg-white text-center px-3 color-oran custom-h6">{% if title %}{{ title }}{% endif %}</h2>
+                    <h1 class="custom-h2 mb-2 color-cafe">Clases de Baile | Salsa y Timba en Lima</h1>
                 </div>
                 <div class="row g-4 justify-content-center">
 
