--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,5 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Cursos | Talleres{% endblock title %}
 
 {% block content %}
     
@@ -92,7 +91,7 @@
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="section-title bg-white text-center px-3 color-oran">Cursos Populares</h6>
-                    <h2 class="mb-2 color-cafe">¡Aprende a Bailar con Nuestros Cursos Más Populares!</h2>
+                    <h1 class="custom-h2 mb-2 color-cafe">Clases de Baile | Salsa y Timba en Lima</h1>
                 </div>
                 <!-- list Courses Start -->
                 <div class="row g-4 justify-content-center">
@@ -139,7 +138,7 @@
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="section-title bg-white text-center px-3 color-oran">Instructor</h6>
-                    <h2 class="mb-2 color-cafe"">Instructor Experto</h2>
+                    <h2 class="custom-h2 mb-2 color-cafe"">Instructor Experto</h2>
                 </div>
                 <div class="row g-4 justify-content-center">
                     {% for instructor in instructors %}
@@ -180,7 +179,7 @@
             <div class="container">
                 <div class="text-center">
                     <h6 class="section-title bg-white text-center color-oran px-3">Testimonios </h6>
-                    <h2 class="mb-2 color-cafe">Nuestros estudiantes dicen!</h2>
+                    <h2 class="custom-h2 mb-2 color-cafe">Nuestros estudiantes dicen!</h2>
                 </div>
                 <div class="owl-carousel testimonial-carousel position-relative">
                     {% for testimony in list_testimony %}
