--- a/templates/_base.html
+++ b/templates/_base.html
@@ -35,7 +35,34 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="icon" href="{% static 'img/logos/favicon_min.png' %}" type="image/png">
 
-
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "DanceSchool",
+          "name": "Cuban Groove Peru",
+          "url": "https://cubangrooveperu.com",
+          "logo": "https://cubangrooveperu.com/static/img/logos/logo_desk.png",
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Lima",
+            "addressRegion": "Lima",
+            "postalCode": "15001",
+            "addressCountry": "PE"
+          },
+          "telephone": "+51 123 456 789",
+          "priceRange": "$$",
+          "description": "Cuban Groove ofrece clases de Salsa y Timba en Lima, donde aprenderás ritmos afrocubanos y otros géneros como son, chachachá, rumba y reguetón cubano.",
+          "openingHours": [
+            "Mo-Fr 09:00-23:00",
+            "Sa-Su 09:00-22:00"
+          ],
+          "sameAs": [
+            "https://instagram.com/cubangroove",
+            "https://instagram.com/luxecoronado"
+          ]
+        }
+    </script>
+        
 
   </head>
 
