--- a/templates/_base.html
+++ b/templates/_base.html
@@ -82,7 +82,7 @@
       <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
           <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <h2 class="m-0 text-primary">
-                <img src="{% static 'img/logos/logo_desk.png' %}" style="width: 200px; height: auto;">
+                <img src="{% static 'img/logos/logo_desk.png' %}" style="width: 200px; height: auto;" alt="Clases de Salsa en Lima">
             </h2>
           </a>
           <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
