--- a/templates/instructors/instructors.html
+++ b/templates/instructors/instructors.html
@@ -17,7 +17,7 @@
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="team-item bg-light">
                                 <div class="overflow-hidden">
-                                    <img class="img-fluid" src="{{ instructor.image.url }}" alt="">
+                                    <img class="img-fluid" src="{{ instructor.image.url }}" alt="{{ instructor.name }}">
                                 </div>
                                 <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                                     <div class="bg-light d-flex justify-content-center pt-2 px-1">
