--- a/templates/courses/course_detail.html
+++ b/templates/courses/course_detail.html
@@ -58,7 +58,7 @@
                         <div class="row g-3">
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <h4 class="text-dark">Contáctate y obten un descuento por el curso de baile</h4>
+                                    <h4 class="text-dark">Contáctate para mas información por el curso de baile</h4>
                                 </div>
                             </div>
                             <div class="col-md-6">
