fix style, add icon youtobe

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -149,6 +149,7 @@
                             <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/luxecoronado/" target="_blank"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/muevetecuba" target="_blank"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.tiktok.com/@luxecoronado" target="_blank"><i class="fab fa-tiktok"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.youtube.com/@CubanGroovePeru" target="_blank"><i class="fab fa-youtube"></i></a>
                         </div>
 
                         <div class="text-center text-white text-rights mb-3">
