--- a/templates/courses/course_detail.html
+++ b/templates/courses/course_detail.html
@@ -140,7 +140,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.3s">
-                    <h2 class="mb-4 color-cafe">Descripcion del Curso</h2>
+                    <h2 class="custom-h2 mb-4 color-cafe">Descripcion del Curso</h2>
                     <p class="mb-4">{{ course.body | safe }}</p>
                     <div class="row gy-2 gx-4 mb-4">
                         {% for feature in course.feature.all %}
