--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,11 +3,22 @@
 <html lang="es-PE">
 
   <head>
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M24NDJ63FD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-M24NDJ63FD');
+    </script>
     <meta charset="utf-8">
     <title>{% block title %}Clases de Baile | Salsa y Timba en Lima | Cuban Groove{% endblock title %}</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="keywords" content="Clases de Baile en Lima, Clases de Timba en Lima, Baile cubano en Lima, Escuela de baile en Lima, Salsa y Timba para principiantes, Instructores de baile en Lima, Academia de Salsa en Lima, Clases de baile latino, Cursos de Salsa y Timba, Danza afrocubana, Ritmos cubanos en Lima, Aprender a bailar Salsa, Clases de baile para adultos, Eventos de baile en Lima, Talleres de Salsa y Timba, Baile social en Lima, Salsa cubana, Timba cubana, Escuela de danza en Lima, Bailes latinos">
     <meta name="description" content="Aprende Salsa y Timba en Lima con Cuban Groove. Descubre ritmos cubanos como la salsa cubana, reparto, cubaton y rumba. ¡Transforma tu forma de bailar!">
+    <meta name="author" content="Cuban Groove">
+    <meta name="robots" content="index, follow">
 
 
     <link rel="alternate" hreflang="es-PE" href="https://cubangrooveperu.com" />
@@ -66,15 +77,7 @@
         }
     </script>
         
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M24NDJ63FD"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
 
-        gtag('config', 'G-M24NDJ63FD');
-    </script>
   </head>
 
 
@@ -291,8 +294,8 @@
 
       <!-- JavaScript Libraries -->
 
-      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" defer></script>
       <script src="{% static 'lib/wow/wow.min.js' %}"></script>
       <script src="{% static 'lib/easing/easing.min.js' %}"></script>
       <script src="{% static 'lib/waypoints/waypoints.min.js' %}"></script>
