--- a/static/css/style.css
+++ b/static/css/style.css
@@ -174,6 +174,11 @@
     display: flex;
     flex-direction: column;
 }
+@media (max-width: 767px) { /* Pantallas menores o iguales a 767px (móviles) */
+    .header-carousel .owl-nav {
+        top: 83%; /* Ajuste de posición para versión móvil */
+    }
+}
 
 .header-carousel .owl-nav .owl-prev,
 .header-carousel .owl-nav .owl-next {
