--- a/templates/_base.html
+++ b/templates/_base.html
@@ -5,13 +5,12 @@
   <head>
      
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M24NDJ63FD"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GTM-MZQLV2CB"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
-        // gtag('js', new Date());
-
-        // gtag('config', 'G-M24NDJ63FD');
+            gtag('js', new Date());
+            gtag('config', 'G-MZQLV2CB');
     </script>
 
     <!-- Google Tag Manager -->
