--- a/templates/_base.html
+++ b/templates/_base.html
@@ -5,12 +5,14 @@
   <head>
      
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GTM-MZQLV2CB"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M24NDJ63FD"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'G-MZQLV2CB');
+        gtag('js', new Date());
+
+        gtag('config', 'G-M24NDJ63FD');
     </script>
 
     <!-- Google Tag Manager -->
