--- a/templates/_base.html
+++ b/templates/_base.html
@@ -24,7 +24,7 @@
 
     
     <meta charset="utf-8">
-    <title>{% block title %}Clases de Baile | Salsa y Timba en Lima | Cuban Groove{% endblock title %}</title>
+    <title>{% block title %}Cuban Groove | Clases de Baile{% endblock title %}</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="keywords" content="Clases de Baile en Lima, Clases de Timba en Lima, Baile cubano en Lima, Escuela de baile en Lima, Salsa y Timba para principiantes, Instructores de baile en Lima, Academia de Salsa en Lima, Clases de baile latino, Cursos de Salsa y Timba, Danza afrocubana, Ritmos cubanos en Lima, Aprender a bailar Salsa, Clases de baile para adultos, Eventos de baile en Lima, Talleres de Salsa y Timba, Baile social en Lima, Salsa cubana, Timba cubana, Escuela de danza en Lima, Bailes latinos">
     <meta name="description" content="Aprende Salsa y Timba en Lima con Cuban Groove. Descubre ritmos cubanos como la salsa cubana, reparto, cubaton y rumba. ¡Transforma tu forma de bailar!">
