--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}{{ post.title }} - Blog de Cuban Groove{% endblock title %}
+{% block title %}Blog | Cuban Groove{% endblock title %}
 
 {% block content %}
 
