--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Blog de Cuban Groove - Noticias y Artículos{% endblock title %}
+{% block title %}Blog | Cuban Groove{% endblock title %}
 
 {% block content %}
 
