--- a/templates/instructors/instructors_detail.html
+++ b/templates/instructors/instructors_detail.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Instructor | Clases de Baile{% endblock title %}
+{% block title %}Luxe Cordonado | Cuban Groove | Clases de Baile{% endblock title %}
 
 
 {% block content %}
