--- a/templates/content_site/privacy_policies.html
+++ b/templates/content_site/privacy_policies.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Políticas de Privacidad y Protección de Datos Personales - Clases de Baile{% endblock title %}
+{% block title %}Políticas de Privacidad | Cuban Groove | Clases de Baile{% endblock title %}
 
 {% block content %}
 
