--- a/templates/content_site/terms_conditions.html
+++ b/templates/content_site/terms_conditions.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Términos y Condiciones - Clases de Baile{% endblock title %}
+{% block title %}Términos y Condiciones | Cuban Groove | Clases de Baile{% endblock title %}
 
 {% block content %}
 
