--- a/templates/instructors/instructors.html
+++ b/templates/instructors/instructors.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Acerca de Nosotros{% endblock title %}
+{% block title %}Luxe Coronado | Cuban Groove | Clases de Baile {% endblock title %}
 
 {% block content %}
     <!-- About Start -->
