--- a/templates/_base.html
+++ b/templates/_base.html
@@ -58,7 +58,8 @@
 
     <!-- Template Stylesheet -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="icon" href="{% static 'img/logos/favicon_min.png' %}" type="image/png">
+    <link rel="icon" href="{% static 'img/logos/favicon.ico' %}" type="image/x-icon">
+    
 
     <script type="application/ld+json">
         {
